# surpyvor

./: .env.dist  .gitignore  README.md  ai.py  app.py  challenges.py  conversation.py  generate_tribe_collage.py  jobs.txt  player.py  players.py  pyproject.toml  relationship.py  script_write.py  tribal_council.py  tribe.py  utils.py
host_dialog/: negative.txt  positive.txt
tests/: test_challenges.py  test_player.py  test_relationship.py  test_tribal_council.py  test_tribes.py
