[tool.poetry]
name = "surpyvor"
version = "0.1.0"
description = "survivor simulator"
authors = ["Nealon Hager <nealonhager@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
names = "^0.3.0"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
